--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -18,4 +18,4 @@ jobs:
     steps:
     # Runs a single command using the runners shell
     - name: Send greeting
-      run: echo "${Env:VCPKG_ROOT}"
+      run: Write-Output "VCPKG root is $env:VCPKG_ROOT/scripts"
