--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -18,4 +18,6 @@ jobs:
     steps:
     # Runs a single command using the runners shell
     - name: Send greeting
-      run: Write-Output "VCPKG root is $env:VCPKG_INSTALLATION_ROOT	/scripts"
+      run: |
+        Write-Output "VCPKG root is $env:VCPKG_INSTALLATION_ROOT	/scripts"
+        Write-Output (dir $env:VCPKG_INSTALLATION_ROOT\installed\x64-windows\bin\)
