--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -10,11 +10,15 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "greet"
-  greet:
+  build:
     # The type of runner that the job will run on
     runs-on: windows-latest
 
     steps:
+    - uses: actions/checkout@v2
+      with:
+        submodules: true
+
     - name: Restore artifacts, or setup vcpkg
       uses: lukka/run-vcpkg@v6
       with:
