--- a/.github/workflows/opencv-windows.yml
+++ b/.github/workflows/opencv-windows.yml
@@ -1,6 +1,10 @@
 name: Build OpenCV x64-windows
 
-#on: [push]
+#on:
+#  push:
+#    tags:
+#      - "v*"
+
 on: [workflow_dispatch]
 
 jobs:
@@ -14,16 +18,26 @@ jobs:
 
     - name: Add MSBuild to PATH
       uses: microsoft/setup-msbuild@v1.0.2
+    
+    # Use prebuilt binary to workaround issue https://github.com/opencv/opencv/issues/9953
+    - name: Download OpenBLAS
+      working-directory: ${{ github.workspace }}
+      run: |
+        Invoke-WebRequest https://github.com/xianyi/OpenBLAS/releases/download/v0.3.13/OpenBLAS-0.3.13-x64.zip -O OpenBLAS.zip
+        Expand-Archive OpenBLAS.zip OpenBLAS
+        Copy-Item OpenBLAS\lib\libopenblas.lib OpenBLAS\lib\openblas.lib
 
     - name: Restore artifacts, or setup vcpkg
       uses: lukka/run-vcpkg@v6
       with:
         vcpkgDirectory: '${{ github.workspace }}/vcpkg'
         vcpkgTriplet: x64-windows
-        vcpkgArguments: '@${{ github.workspace }}/vcpkg.txt'
+        vcpkgArguments: tbb
 
     - name: Configure CMake
       uses: lukka/run-cmake@v3
+      env:
+        OpenBLAS_HOME: ${{ github.workspace }}/OpenBLAS
       with:
         cmakeListsOrSettingsJson: CMakeListsTxtAdvanced
         cmakeListsTxtPath: '${{ github.workspace }}/opencv/CMakeLists.txt'
@@ -35,7 +49,7 @@ jobs:
           -G "Visual Studio 16 2019"
           -A "x64"
           -DMAKE_BUILD_TYPE=RELEASE
-          -DCMAKE_INSTALL_PREFIX="${{github.workspace}}/OpenCV"
+          -DCMAKE_INSTALL_PREFIX="${{github.workspace}}/Release"
           -DWITH_EIGEN=ON
           -DWITH_TBB=ON
           -DWITH_OPENGL=ON
@@ -54,44 +68,24 @@ jobs:
           -DBUILD_opencv_world=ON
           '
 
-    # - name: Configure CMake
-    #   working-directory: ${{github.workspace}}/opencv-4.5.1
-    #   env:
-    #     OpenBLAS_HOME: ${{github.workspace}}\OpenBLAS
-    #   run: >
-    #       cmake 
-    #       -B ${{github.workspace}}/opencv-4.5.1/build
-    #       -DMAKE_BUILD_TYPE=RELEASE
-    #       -DCMAKE_INSTALL_PREFIX="${{github.workspace}}/OpenCV"
-    #       -DCMAKE_TOOLCHAIN_FILE="$env:VCPKG_INSTALLATION_ROOT/scripts/buildsystems/vcpkg.cmake"
-    #       -G "Visual Studio 16 2019"
-    #       -A "x64"
-    #       -DWITH_EIGEN=ON
-    #       -DWITH_TBB=ON
-    #       -DWITH_OPENGL=ON
-    #       -DBUILD_TIFF=ON
-    #       -DWITH_QT=OFF
-    #       -DWITH_FFMPEG=OFF
-    #       -DBUILD_opencv_apps=OFF
-    #       -DBUILD_DOCS=OFF
-    #       -DBUILD_PACKAGE=OFF
-    #       -DBUILD_PERF_TESTS=OFF
-    #       -DBUILD_TESTS=OFF
-    #       -DBUILD_JAVA=OFF
-    #       -DBUILD_opencv_python2=OFF
-    #       -DBUILD_opencv_python3=OFF
-    #       -DBUILD_LIST="imgcodecs,imgproc,highgui"
-    #       -DBUILD_opencv_world=ON
+    - name: Build
+      working-directory: ${{ github.workspace }}
+      run: |
+        msbuild build\OpenCV.sln /t:Build /p:Configuration=Release
+        msbuild build\INSTALL.vcxproj /t:Build /p:Configuration=Release
 
-    # - name: Build
-    #   working-directory: ${{github.workspace}}/opencv-4.5.1
-    #   run: |
-    #     msbuild build\OpenCV.sln /t:Build /p:Configuration=Release
-    #     msbuild build\INSTALL.vcxproj /t:Build /p:Configuration=Release
+    - name: Pack
+      working-directory: ${{ github.workspace }}
+      run: |
+        Copy-Item vcpkg\installed\x64-windows\bin\tbb.dll Release\x64\vc16\bin\
+        Copy-Item OpenBLAS\bin\libopenblas.dll Release\x64\vc16\bin\
+        Write-Host (dir Release\x64\vc16\bin\)
+        Compress-Archive -Path Release\* -DestinationPath opencv-win64.zip
 
-    # - name: Pack
-    #   working-directory: ${{github.workspace}}
-    #   run: |
-    #     Copy-Item vcpkg\installed\x64-windows\bin\tbb.dll OpenCV\x64\vc16\bin\
-    #     Copy-Item OpenBLAS\bin\libopenblas.dll OpenCV\x64\vc16\bin\
-    #     Write-Host (dir OpenCV\x64\vc16\bin\)
+    # - uses: "marvinpinto/action-automatic-releases@latest"
+    #   with:
+    #     repo_token: "${{ secrets.GITHUB_TOKEN }}"
+    #     draft: true
+    #     prerelease: false
+    #     files: |
+    #       opencv-win64.zip
