--- a/.github/workflows/opencv-windows.yml
+++ b/.github/workflows/opencv-windows.yml
@@ -1,91 +1,92 @@
 name: Build OpenCV x64-windows
 
-#on:
-#  push:
-#    tags:
-#      - "v*"
+on:
+  push:
+    tags:
+      - "v*"
 
-on: [workflow_dispatch]
+# on: [workflow_dispatch]
 
 jobs:
   build:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v2
-      with:
-        submodules: true
+      - uses: actions/checkout@v2
+        with:
+          submodules: true
 
-    - name: Add MSBuild to PATH
-      uses: microsoft/setup-msbuild@v1.0.2
-    
-    # Use prebuilt binary to workaround issue https://github.com/opencv/opencv/issues/9953
-    - name: Download OpenBLAS
-      working-directory: ${{ github.workspace }}
-      run: |
-        Invoke-WebRequest https://github.com/xianyi/OpenBLAS/releases/download/v0.3.13/OpenBLAS-0.3.13-x64.zip -O OpenBLAS.zip
-        Expand-Archive OpenBLAS.zip OpenBLAS
-        Copy-Item OpenBLAS\lib\libopenblas.lib OpenBLAS\lib\openblas.lib
+      - name: Add MSBuild to PATH
+        uses: microsoft/setup-msbuild@v1.0.2
 
-    - name: Restore artifacts, or setup vcpkg
-      uses: lukka/run-vcpkg@v6
-      with:
-        vcpkgDirectory: '${{ github.workspace }}/vcpkg'
-        vcpkgTriplet: x64-windows
-        vcpkgArguments: tbb
+      # Use prebuilt binary to workaround issue https://github.com/opencv/opencv/issues/9953
+      - name: Download OpenBLAS
+        working-directory: ${{ github.workspace }}
+        run: |
+          Invoke-WebRequest https://github.com/xianyi/OpenBLAS/releases/download/v0.3.13/OpenBLAS-0.3.13-x64.zip -O OpenBLAS.zip
+          Expand-Archive OpenBLAS.zip OpenBLAS
+          Copy-Item OpenBLAS\lib\libopenblas.lib OpenBLAS\lib\openblas.lib
 
-    - name: Configure CMake
-      uses: lukka/run-cmake@v3
-      env:
-        OpenBLAS_HOME: ${{ github.workspace }}/OpenBLAS
-      with:
-        cmakeListsOrSettingsJson: CMakeListsTxtAdvanced
-        cmakeListsTxtPath: '${{ github.workspace }}/opencv/CMakeLists.txt'
-        buildDirectory: ${{ github.workspace }}/build
-        useVcpkgToolchainFile: true
-        buildWithCMake: false
-        cmakeAppendedArgs: >
-          '
-          -G "Visual Studio 16 2019"
-          -A "x64"
-          -DMAKE_BUILD_TYPE=RELEASE
-          -DCMAKE_INSTALL_PREFIX="${{github.workspace}}/Release"
-          -DWITH_EIGEN=ON
-          -DWITH_TBB=ON
-          -DWITH_OPENGL=ON
-          -DBUILD_TIFF=ON
-          -DWITH_QT=OFF
-          -DWITH_FFMPEG=OFF
-          -DBUILD_opencv_apps=OFF
-          -DBUILD_DOCS=OFF
-          -DBUILD_PACKAGE=OFF
-          -DBUILD_PERF_TESTS=OFF
-          -DBUILD_TESTS=OFF
-          -DBUILD_JAVA=OFF
-          -DBUILD_opencv_python2=OFF
-          -DBUILD_opencv_python3=OFF
-          -DBUILD_LIST="imgcodecs,imgproc,highgui"
-          -DBUILD_opencv_world=ON
-          '
+      - name: Restore artifacts, or setup vcpkg
+        uses: lukka/run-vcpkg@v6
+        with:
+          vcpkgDirectory: "${{ github.workspace }}/vcpkg"
+          vcpkgTriplet: x64-windows
+          vcpkgArguments: tbb
 
-    - name: Build
-      working-directory: ${{ github.workspace }}
-      run: |
-        msbuild build\OpenCV.sln /t:Build /p:Configuration=Release
-        msbuild build\INSTALL.vcxproj /t:Build /p:Configuration=Release
+      - name: Configure CMake
+        uses: lukka/run-cmake@v3
+        env:
+          OpenBLAS_HOME: ${{ github.workspace }}/OpenBLAS
+        with:
+          cmakeListsOrSettingsJson: CMakeListsTxtAdvanced
+          cmakeListsTxtPath: "${{ github.workspace }}/opencv/CMakeLists.txt"
+          buildDirectory: ${{ github.workspace }}/build
+          useVcpkgToolchainFile: true
+          buildWithCMake: false
+          cmakeAppendedArgs: >
+            '
+            -G "Visual Studio 16 2019"
+            -A "x64"
+            -DMAKE_BUILD_TYPE=RELEASE
+            -DCMAKE_INSTALL_PREFIX="${{github.workspace}}/Release"
+            -DWITH_EIGEN=ON
+            -DWITH_TBB=ON
+            -DWITH_OPENGL=ON
+            -DBUILD_TIFF=ON
+            -DWITH_QT=OFF
+            -DWITH_FFMPEG=OFF
+            -DBUILD_opencv_apps=OFF
+            -DBUILD_DOCS=OFF
+            -DBUILD_PACKAGE=OFF
+            -DBUILD_PERF_TESTS=OFF
+            -DBUILD_TESTS=OFF
+            -DBUILD_JAVA=OFF
+            -DBUILD_opencv_python2=OFF
+            -DBUILD_opencv_python3=OFF
+            -DBUILD_LIST="imgcodecs,imgproc,highgui"
+            -DBUILD_opencv_world=ON
+            '
 
-    - name: Pack
-      working-directory: ${{ github.workspace }}
-      run: |
-        Copy-Item vcpkg\installed\x64-windows\bin\tbb.dll Release\x64\vc16\bin\
-        Copy-Item OpenBLAS\bin\libopenblas.dll Release\x64\vc16\bin\
-        Write-Host (dir Release\x64\vc16\bin\)
-        Compress-Archive -Path Release\* -DestinationPath opencv-win64.zip
+      - name: Build
+        working-directory: ${{ github.workspace }}
+        run: |
+          msbuild build\OpenCV.sln /t:Build /p:Configuration=Release
+          msbuild build\INSTALL.vcxproj /t:Build /p:Configuration=Release
 
-    # - uses: "marvinpinto/action-automatic-releases@latest"
-    #   with:
-    #     repo_token: "${{ secrets.GITHUB_TOKEN }}"
-    #     draft: true
-    #     prerelease: false
-    #     files: |
-    #       opencv-win64.zip
+      - name: Pack
+        working-directory: ${{ github.workspace }}
+        run: |
+          Copy-Item vcpkg\installed\x64-windows\bin\tbb.dll Release\x64\vc16\bin\
+          Copy-Item OpenBLAS\bin\libopenblas.dll Release\x64\vc16\bin\
+          Write-Host (dir Release\x64\vc16\bin\)
+          Compress-Archive -Path Release\* -DestinationPath opencv-win64.zip
+
+      - name: Draft release
+        uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          draft: true
+          prerelease: false
+          files: |
+            opencv-win64.zip
