fix draft release tag

--- a/.github/workflows/opencv-windows.yml
+++ b/.github/workflows/opencv-windows.yml
@@ -88,5 +88,6 @@ jobs:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           draft: true
           prerelease: false
+          automatic_release_tag: latest
           files: |
             opencv-win64.zip
