--- a/.github/workflows/container-image.yml
+++ b/.github/workflows/container-image.yml
@@ -26,6 +26,8 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: rainbean/torch
+          tags: |
+            type=semver,pattern={{major}}.{{minor}}
       
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
