--- a/.github/workflows/opencv-windows.yml
+++ b/.github/workflows/opencv-windows.yml
@@ -34,15 +34,16 @@ jobs:
         uses: lukka/run-cmake@v3
         env:
           OpenBLAS_HOME: ${{ github.workspace }}/OpenBLAS
+          CMAKE_GENERATOR: Visual Studio 16 2019
         with:
           cmakeListsOrSettingsJson: CMakeListsTxtAdvanced
           cmakeListsTxtPath: "${{ github.workspace }}/opencv/CMakeLists.txt"
           buildDirectory: ${{ github.workspace }}/build
           useVcpkgToolchainFile: true
-          buildWithCMake: false
+          buildWithCMake: true
+          buildWithCMakeArgs: '--target install'
           cmakeAppendedArgs: >
             '
-            -G "Visual Studio 16 2019"
             -A "x64"
             -DMAKE_BUILD_TYPE=RELEASE
             -DCMAKE_INSTALL_PREFIX="${{github.workspace}}/Release"
@@ -64,25 +65,19 @@ jobs:
             -DBUILD_opencv_world=ON
             '
 
-      - name: Build
-        working-directory: ${{ github.workspace }}
-        run: |
-          msbuild build\OpenCV.sln /t:Build /p:Configuration=Release
-          msbuild build\INSTALL.vcxproj /t:Build /p:Configuration=Release
+#       - name: Pack
+#         working-directory: ${{ github.workspace }}
+#         run: |
+#           Copy-Item vcpkg\installed\x64-windows\bin\tbb.dll Release\x64\vc16\bin\
+#           Copy-Item OpenBLAS\bin\libopenblas.dll Release\x64\vc16\bin\
+#           Compress-Archive -Path Release\* -DestinationPath opencv-win64.zip
 
-      - name: Pack
-        working-directory: ${{ github.workspace }}
-        run: |
-          Copy-Item vcpkg\installed\x64-windows\bin\tbb.dll Release\x64\vc16\bin\
-          Copy-Item OpenBLAS\bin\libopenblas.dll Release\x64\vc16\bin\
-          Compress-Archive -Path Release\* -DestinationPath opencv-win64.zip
-
-      - name: Draft release
-        uses: "marvinpinto/action-automatic-releases@latest"
-        with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          draft: true
-          prerelease: false
-          automatic_release_tag: latest
-          files: |
-            opencv-win64.zip
+#       - name: Draft release
+#         uses: "marvinpinto/action-automatic-releases@latest"
+#         with:
+#           repo_token: "${{ secrets.GITHUB_TOKEN }}"
+#           draft: true
+#           prerelease: false
+#           automatic_release_tag: latest
+#           files: |
+#             opencv-win64.zip
